--- a/registro-usuarios/src/main/resources/static/login.html
+++ b/registro-usuarios/src/main/resources/static/login.html
@@ -40,13 +40,9 @@
                                     <div class="text-center" style="padding-top: 15px">
                                         <p id="error" class="error-message"></p>
                                      </div>
-                                  <!--  <div class="text-center"><a class="small" href="forgot-password.html">Has olvidado tu contraseña?</a></div> -->
-                                    <div class="text-center"></div>
                                     <div class="text-center">
-                                        <a class="small" href="register.html"
-                                          >Todavia no tiene cuenta? Registrese!</a
-                                        >
-                                      </div>
+                                        <a class="small" href="register.html">Todavia no tiene cuenta? Registrese!</a>
+                                    </div>
                                 </div>
                             </div>
                         </div>
@@ -86,13 +82,11 @@
                 }
             })
             .catch((error) => {
-            console.error("Error:", error);
-            document.getElementById('error').textContent = error.message;
-            document.getElementById('error').style.display= "block";
-          });
+                console.error("Error:", error);
+                document.getElementById('error').textContent = error.message;
+                document.getElementById('error').style.display= "block";
+            });
         }
-        
-
     </script>
     <script src="assets/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/bootstrap/js/bootstrap.min.js"></script>
