Recuerdame v1(fallo seguridad)

--- a/registro-usuarios/src/main/resources/static/index.html
+++ b/registro-usuarios/src/main/resources/static/index.html
@@ -417,7 +417,9 @@
                 })
                 .catch(error => console.error('Error during login:', error));
         });
-
+        function redirectToLogin() {
+            window.location.href = '/login.html';
+        }
         function fetchTransportData(stopId, elementId, stopNameElementId) {
             const accessToken = localStorage.getItem('emtAccessToken');
 
