--- a/registro-usuarios/src/main/resources/static/login.html
+++ b/registro-usuarios/src/main/resources/static/login.html
@@ -78,11 +78,24 @@
         </div>
     </div>
     <script>
+        document.addEventListener("DOMContentLoaded", function() {
+            // Load credentials from localStorage if available
+            const rememberedEmail = localStorage.getItem("rememberedEmail");
+            const rememberedPassword = localStorage.getItem("rememberedPassword");
+
+            if (rememberedEmail && rememberedPassword) {
+                document.getElementById("exampleInputEmail").value = rememberedEmail;
+                document.getElementById("exampleInputPassword").value = rememberedPassword;
+                document.getElementById("formCheck-1").checked = true;
+            }
+        });
+
         function login(event) {
             event.preventDefault();
             var email = document.getElementById("exampleInputEmail").value;
             var password = document.getElementById("exampleInputPassword").value;
-        
+            var rememberMe = document.getElementById("formCheck-1").checked;
+
             fetch("/users/login", {
                 method: "POST",
                 headers: {
@@ -102,6 +115,15 @@
             .then(data => {
                 if (data && data.jwtToken) {
                     localStorage.setItem('jwtToken', data.jwtToken);
+
+                    if (rememberMe) {
+                        localStorage.setItem("rememberedEmail", email);
+                        localStorage.setItem("rememberedPassword", password);
+                    } else {
+                        localStorage.removeItem("rememberedEmail");
+                        localStorage.removeItem("rememberedPassword");
+                    }
+
                     window.location.href = "/index.html";
                 } else {
                     alert("No se pudo iniciar sesión correctamente. Por favor, intente de nuevo.");
