--- a/registro-usuarios/src/main/resources/static/login.html
+++ b/registro-usuarios/src/main/resources/static/login.html
@@ -41,7 +41,7 @@
                     <div class="card-body p-0">
                         <div class="row">
                             <div class="col-lg-6 offset-xl-3 align-self-center">
-                                <div class="p-5"><img src="assets/img/logoEduca.jpg">
+                                <div class="p-5"><img src="assets/img/logoEduca.svg" style="width: 100%;">
                                     <div class="text-center">
                                         <h4 class="text-dark mb-4">Bienvenido!</h4>
                                     </div>
