--- a/registro-usuarios/src/main/resources/static/FaQ.html
+++ b/registro-usuarios/src/main/resources/static/FaQ.html
@@ -13,6 +13,27 @@
     <link rel="stylesheet" href="assets/css/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="assets/css/fonts/fontawesome-all.min.css">
     <link rel="stylesheet" href="assets/css/css/untitled.css">
+
+    <style>
+        .text-container {
+            display: flex;
+            flex-direction: column;
+        }
+    
+        #userName {
+            display: block; /* Asegura que se muestren en líneas separadas */
+            text-align: center; /* Centra el texto */
+            margin-right: 15px;
+        }
+    
+        #userRole {
+            display: block; /* Asegura que se muestren en líneas separadas */
+            font-size: 0.8em; /* Tamaño más pequeño */
+            color: rgba(128, 128, 128, 0.7); /* Color gris y un poco difuminado */
+            text-align: right; /* Alinea a la derecha */
+            margin-right: 15px;
+        }
+    </style>
 </head>
 
 <body id="page-top">
@@ -121,9 +142,20 @@
                             </li>
                             <div class="d-none d-sm-block topbar-divider"></div>
                             <li class="nav-item dropdown no-arrow">
-                                <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="#"><span class="d-none d-lg-inline me-2 text-gray-600 small" id="userName">Cargando...</span><img class="border rounded-circle img-profile" src="" id="userImage"></a>
-                                    <div class="dropdown-menu shadow dropdown-menu-end animated--grow-in"><a class="dropdown-item" href="#"><i class="fas fa-user fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Profile</a><a class="dropdown-item" href="#"><i class="fas fa-cogs fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Settings</a><a class="dropdown-item" href="#"><i class="fas fa-list fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Activity log</a>
-                                        <div class="dropdown-divider"></div><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Logout</a>
+                                <div class="nav-item dropdown no-arrow">
+                                    <a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="/login.html">
+                                        <div class="text-container">
+                                            <span class="d-none d-lg-inline text-gray-600 small" id="userName">&nbsp;Daniel Rodriguez</span>
+                                            <span class="d-none d-lg-inline text-gray-600 extra-small" id="userRole">&nbsp;Alumno</span>
+                                        </div>
+                                        <img class="border rounded-circle img-profile" src="assets/img/logoEduca.jpg" id="userImage">
+                                    </a>
+                                    <div class="dropdown-menu shadow dropdown-menu-end animated--grow-in">
+                                        <a class="dropdown-item" href="#"><i class="fas fa-user fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Profile</a>
+                                        <a class="dropdown-item" href="#"><i class="fas fa-cogs fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Settings</a>
+                                        <a class="dropdown-item" href="#"><i class="fas fa-list fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Activity log</a>
+                                        <div class="dropdown-divider" onclick="logout()"></div>
+                                        <a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Logout</a>
                                     </div>
                                 </div>
                             </li>
@@ -365,6 +397,7 @@
                         if (data) {
                             document.getElementById('userName').textContent = data.firstName + ' ' + data.lastName;
                             document.getElementById('userImage').src = data.imageUrl || 'assets/img/default.png';
+                            document.getElementById('userRole').textContent = data.roleName;
                         }
                     })
                     .catch(error => {
