--- a/registro-usuarios/src/main/resources/static/index.html
+++ b/registro-usuarios/src/main/resources/static/index.html
@@ -39,6 +39,25 @@
             max-height: 400px;
             overflow-y: auto;
         }
+
+        .text-container {
+            display: flex;
+            flex-direction: column;
+        }
+    
+        #userName {
+            display: block; /* Asegura que se muestren en líneas separadas */
+            text-align: center; /* Centra el texto */
+            margin-right: 15px;
+        }
+    
+        #userRole {
+            display: block; /* Asegura que se muestren en líneas separadas */
+            font-size: 0.8em; /* Tamaño más pequeño */
+            color: rgba(128, 128, 128, 0.7); /* Color gris y un poco difuminado */
+            text-align: right; /* Alinea a la derecha */
+            margin-right: 15px;
+        }
     </style>
 </head>
 
@@ -149,9 +168,20 @@
                             </li>
                             <div class="d-none d-sm-block topbar-divider"></div>
                             <li class="nav-item dropdown no-arrow">
-                                <div class="nav-item dropdown no-arrow"><a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="/login.html"><span class="d-none d-lg-inline me-2 text-gray-600 small" id="userName">&nbsp;Login</span><img class="border rounded-circle img-profile" src="assets/img/logoEduca.jpg" id="userImage"></a>
-                                    <div class="dropdown-menu shadow dropdown-menu-end animated--grow-in"><a class="dropdown-item" href="#"><i class="fas fa-user fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Profile</a><a class="dropdown-item" href="#"><i class="fas fa-cogs fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Settings</a><a class="dropdown-item" href="#"><i class="fas fa-list fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Activity log</a>
-                                        <div class="dropdown-divider" onclick="logout()"></div><a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Logout</a>
+                                <div class="nav-item dropdown no-arrow">
+                                    <a class="dropdown-toggle nav-link" aria-expanded="false" data-bs-toggle="dropdown" href="/login.html">
+                                        <div class="text-container">
+                                            <span class="d-none d-lg-inline text-gray-600 small" id="userName">&nbsp;Daniel Rodriguez</span>
+                                            <span class="d-none d-lg-inline text-gray-600 extra-small" id="userRole">&nbsp;</span>
+                                        </div>
+                                        <img class="border rounded-circle img-profile" src="assets/img/logoEduca.jpg" id="userImage">
+                                    </a>
+                                    <div class="dropdown-menu shadow dropdown-menu-end animated--grow-in">
+                                        <a class="dropdown-item" href="#"><i class="fas fa-user fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Profile</a>
+                                        <a class="dropdown-item" href="#"><i class="fas fa-cogs fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Settings</a>
+                                        <a class="dropdown-item" href="#"><i class="fas fa-list fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Activity log</a>
+                                        <div class="dropdown-divider" onclick="logout()"></div>
+                                        <a class="dropdown-item" href="#"><i class="fas fa-sign-out-alt fa-sm fa-fw me-2 text-gray-400"></i>&nbsp;Logout</a>
                                     </div>
                                 </div>
                             </li>
@@ -319,7 +349,7 @@
             if (token) {
                 fetchUserData(token);
             } else {
-           //     redirectToLogin();
+                redirectToLogin();
             }
 
             // Cargar datos de transporte al abrir el contenido
@@ -357,6 +387,7 @@
                             }
                             element.textContent = data.firstName + ' ' + data.lastName;
                             document.getElementById('userImage').src = data.imageUrl || 'assets/img/default.png';
+                            document.getElementById('userRole').textContent = data.roleName || 'Role';
                             showOrHideNavItems(data.roleName);
                         }
                     })
@@ -388,7 +419,7 @@
 
         function logout() {
             localStorage.removeItem('jwtToken');
-            redirectToLogin();
+            location.reload(true);
         }
 
         function showOrHideNavItems(role) {
